src/components/Header/Header.css
.Header {
    height: 60px;
    display: flex;
    color: white;
	background-color: var(--main-header-bg);
}

.Header-left {
	width: 50%;
	display: flex;
	justify-content: flex-end;
}

.Header-right {
	width: 50%;
	display: flex;
	justify-content: flex-start;
}

a.Header-item {
	color: white !important;
	line-height: 4.1em;
	padding: 0px 10px;
	font-size: 14px;
	font-weight: 300;
	margin-right: 5px;
}

a.Header-item.active {
	font-weight: 700;
}

.Header h3 {
  margin-left: 20px;
  font-size: 1.4em;
  font-weight: normal;
}

.Header-logo {
    width: 250px;
    height: 100%;
    padding: 0 20px;
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 12px;
    font-weight: 300;
    font-family: 'Montserrat', sans-serif;
    background-color: rgba(0, 0, 0, 0.05);
}

